Correct Responsive design for datatables

--- a/Task1LoginRegister/Views/CategorySubcategory/Edit.cshtml
+++ b/Task1LoginRegister/Views/CategorySubcategory/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Task1LoginRegister.Models.CategorySubcategoryViewModel
-
+<div class="container mt-3">
 <h2 class="text-center text-primary my-4">Edit Category and Subcategories</h2>
 
 <div class="card shadow-lg p-4">
@@ -59,4 +59,5 @@
             <a asp-action="Index" class="btn btn-lg btn-secondary px-4 shadow"><i class="fas fa-cancel"></i> Cancel</a>
         </div>
     </form>
+</div>
 </div>
