--- a/Task1LoginRegister/Views/CategorySubcategory/Create.cshtml
+++ b/Task1LoginRegister/Views/CategorySubcategory/Create.cshtml
@@ -63,7 +63,7 @@
 
                 div.innerHTML = `
                             <input type="text" name="SubcategoryNames" class="form-control" placeholder="Enter subcategory name" required>
-                            <button type="button" class="btn btn-danger remove-subcategory">X<i class="fas fa-trash"></i></button>
+                            <button type="button" class="btn btn-danger remove-subcategory"><i class="fas fa-trash"></i></button>
                         `;
 
                 subcategoryContainer.appendChild(div);
