--- a/Task1LoginRegister/Views/CategorySubcategory/Index.cshtml
+++ b/Task1LoginRegister/Views/CategorySubcategory/Index.cshtml
@@ -5,23 +5,22 @@
 }
 
 <div class="container-fluid mt-4">
-    <div class="d-flex flex-column flex-md-row justify-content-between align-items-center mb-4 text-center text-md-start">
-        <h2 class="text-uppercase text-dark">Category & Subcategory List</h2>
-    </div>
 
-    <div class="alert alert-dark text-center">
+    <h2 class="text-uppercase text-dark text-center">Category & Subcategory List</h2>
+
+    <div class="alert alert-dark text-center mt-4">
         <h5 class="mb-2">Want to manage products?</h5>
         <a asp-action="Index" asp-controller="Products" class="btn btn-dark btn-md text-white">
             <i class="fas fa-box-open"></i> Go to Products Dashboard
         </a>
     </div>
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-center mb-4 text-center text-md-start">
-        
+
         <a asp-action="Create" class="btn btn-success btn-md mt-2 mt-md-0">
             <i class="fas fa-plus-circle"></i> Add Category & Subcategory
         </a>
     </div>
-    
+
     <div class="card shadow-lg">
         <div class="card-body">
             <div class="table-responsive">
@@ -70,7 +69,10 @@
 @section Scripts {
     <script>
         $(document).ready(function () {
-            $("#categoryTable").DataTable();
+            $("#categoryTable").DataTable({
+                responsive: true,
+
+            });
         });
     </script>
 }
