--- a/Task1LoginRegister/Views/Login/SignUp.cshtml
+++ b/Task1LoginRegister/Views/Login/SignUp.cshtml
@@ -6,10 +6,10 @@
 
 <link href="~/css/loginsignup.css" rel="stylesheet" />
 <hr />
-<div class="container my-5">
+<div class="container my-5" >
     <div class="row justify-content-center">
-        <div class="col-lg-6 col-md-7 col-sm-10">
-            <div class="card shadow-lg border-0 rounded-lg">
+        <div class="col-lg-9 col-md-8 col-sm-10 col-12" >
+            <div class="card shadow-lg border-0 rounded-lg" style="max-width:700px">
                 <div class="card-header text-center text-white py-4" style="background: linear-gradient(90deg, #007bff, #00c6ff);">
                     <h3 class="card-title mb-0">SignUp</h3>
                 </div>
