--- a/Task1LoginRegister/Views/Products/Delete.cshtml
+++ b/Task1LoginRegister/Views/Products/Delete.cshtml
@@ -113,7 +113,7 @@
                                         else if (fileExtension == ".mp4" || fileExtension == ".webm" || fileExtension == ".ogg")
                                         {
                                             // Display Video
-                                            <video width="100" height="auto" controls autoplay>
+                                            <video width="100" height="auto" controls autoplay loop>
                                                 <source src="@productImage.ImageUrl" type="video/@fileExtension.Substring(1)">
                                                 Your browser does not support the video tag.
                                             </video>
