--- a/Task1LoginRegister/Views/Products/Index.cshtml
+++ b/Task1LoginRegister/Views/Products/Index.cshtml
@@ -53,7 +53,7 @@
                                 else if (fileExtension == ".mp4" || fileExtension == ".webm" || fileExtension == ".ogg")
                                 {
                                     // Display video
-                                    <video width="100" height="auto" controls autoplay>
+                                    <video width="100" height="auto" controls autoplay loop preload="metadata">
                                         <source src="@primaryMedia.ImageUrl" type="video/@fileExtension.Substring(1)">
                                         Your browser does not support the video tag.
                                     </video>
