#Added User Home page and product display with filter

--- a/Task1LoginRegister/Views/Products/Create.cshtml
+++ b/Task1LoginRegister/Views/Products/Create.cshtml
@@ -25,7 +25,7 @@
 
         <div class="row mb-3">
             <div class="col-md-6">
-                <label asp-for="SellingPricePercentage" class="form-label">Selling Price Percentage</label>
+                <label asp-for="SellingPricePercentage" class="form-label">Selling Price Percentage (Discount %)</label>
                 <input asp-for="SellingPricePercentage" type="number" class="form-control" />
                 <span asp-validation-for="SellingPricePercentage" class="text-danger"></span>
             </div>
