--- a/Task1LoginRegister/Views/Products/Create.cshtml
+++ b/Task1LoginRegister/Views/Products/Create.cshtml
@@ -88,9 +88,10 @@
             </div>
         </div>
 
-        <div class="d-flex justify-content-between">
-            <a href="javascript:history.back()" class="btn btn-secondary px-4 py-2"><i class="fas fa-arrow-left"></i> Back</a>
-            <button type="submit" class="btn btn-primary px-4 py-2"><i class="fas fa-save"></i> Save</button>
+        <div class="d-flex justify-content-center">
+            <button type="submit" class="btn btn-primary px-4 py-2" style="margin-right:20px;"><i class="fas fa-save"></i> Save</button>
+            <a asp-action="Index" asp-controller="Products" class="btn btn-secondary px-4 py-2"><i class="fas fa-arrow-left"></i> Back</a>
+
         </div>
     </form>
 </div>
