--- a/Task1LoginRegister/Views/Shared/_ProductPartialView.cshtml
+++ b/Task1LoginRegister/Views/Shared/_ProductPartialView.cshtml
@@ -1,6 +1,8 @@
 ﻿@model Task1LoginRegister.Models.Product
-
-<div class="col-lg-3 col-lg-4 col-md-6 col-sm-6 mt-3" >
+@{
+    var columnClass = ViewData["ColumnClass"] as string ?? "col-lg-3 col-md-6 col-sm-6";
+}
+<div class="@columnClass mt-3">
     <div class="card product-card shadow-sm rounded-3 d-flex flex-column h-100">
         <div class="position-relative">
             @{
@@ -40,7 +42,7 @@
                 <span class="text-muted text-decoration-line-through">@Model.Price.ToString("C")</span>
              
             </div>
-            <a href="/Products/Details/@Model.ProductId" class="btn btn-outline-primary detail w-100 mt-auto">View Details</a>
+            <a href="/User/Details/@Model.ProductId" class="btn btn-outline-primary detail w-100 mt-auto">View Details</a>
         </div>
     </div>
 </div>
