--- a/Task1LoginRegister/Views/User/Details.cshtml
+++ b/Task1LoginRegister/Views/User/Details.cshtml
@@ -27,13 +27,15 @@
     }
 
     .main-product-media {
-        width: 100%;
+        max-width: 100%;
+        width:100%;
         height: 450px;
-        object-fit: cover;
+        object-fit:contain;
         border: 2px solid #ddd;
         padding: 5px;
         border-radius: 10px;
     }
+
 
     .thumbnail-container {
         display: flex;
@@ -42,8 +44,8 @@
     }
 
     .thumbnail-img {
-        width: 80px;
-        height: 60px;
+        width: 100px;
+        height: 80px;
         cursor: pointer;
         border: 2px solid transparent;
         border-radius: 5px;
