#Added search and checkbox for subcategory selection instead of dropdown

--- a/Task1LoginRegister/Views/User/Details.cshtml
+++ b/Task1LoginRegister/Views/User/Details.cshtml
@@ -41,6 +41,8 @@
         display: flex;
         gap: 10px;
         padding: 5px;
+        overflow-x:scroll;
+        padding-left:80px;
     }
 
     .thumbnail-img {
